--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "version": 2,
-  "rootDirectory": "frontend",
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "builds": [
+    { 
+      "src": "frontend/package.json", 
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    { 
+      "src": "/(.*)", 
+      "dest": "/frontend/$1" 
+    }
+  ]
 }
