--- a/package.json
+++ b/package.json
@@ -3,10 +3,41 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "echo 'dev script not configured' && exit 1",
-    "build": "echo 'build script not configured' && exit 1",
-    "start": "echo 'start script not configured' && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:generate-sql": "node --import tsx --env-file=.env.local scripts/sync-shopify-history.ts",
+    "db:load-sql": "node --import tsx --env-file=.env.local scripts/execute-sql.ts"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@supabase/supabase-js": "^2.50.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.1.0",
+    "lucide-react": "^0.395.0",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tsx": "^4.15.7",
+    "undici": "^6.19.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
+  }
 }
