--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.0",
     "lucide-react": "^0.395.0",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tsx": "^4.15.7",
+    "tw-animate-css": "^1.3.5",
     "undici": "^6.19.2"
   },
   "devDependencies": {
