--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:load-sql": "node --import tsx --env-file=.env.local scripts/execute-sql.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@supabase/supabase-js": "^2.50.4",
