--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.15.7",
     "tw-animate-css": "^1.3.5",
     "undici": "^6.19.2"
